syntax = "proto3";
package rollchains.tiablob.v1;

import "gogoproto/gogo.proto";
import "rollchains/tiablob/v1/validator.proto";
import "rollchains/tiablob/lightclients/celestia/v1/celestia.proto";

option go_package = "github.com/rollchains/tiablob";

// GenesisState defines the rollchain module's genesis state.
message GenesisState {
    repeated Validator validators = 1 [ (gogoproto.nullable) = false ];

    // the height of the last block that was proven to be posted to Celestia.
    // increment only, never skipping heights.
    int64 proven_height = 2;

    .rollchains.tiablob.lightclients.celestia.v1.GenesisState celestia_genesis_state = 3;

}